--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -7,4 +7,7 @@
     
     <!--Highlight accent brush (button highlight state)-->
     <SolidColorBrush x:Key="AccentBrushMediumFade"/>
+    
+    <!--Red danger brush-->
+    <SolidColorBrush x:Key="RedDangerBrush" Color="#FFDC232B"/>
 </ResourceDictionary>
