--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/SaveCodePromptFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/SaveCodePromptFlyout.xaml
@@ -2,23 +2,48 @@
     x:Class="Brainf_ck_sharp_UWP.UserControls.Flyouts.SaveCodePromptFlyout"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Brainf_ck_sharp_UWP.UserControls.Flyouts"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:customControls="using:Brainf_ck_sharp_UWP.UserControls.CustomControls"
+    xmlns:converters="using:Brainf_ck_sharp_UWP.Converters"
     mc:Ignorable="d"
     d:DesignHeight="300"
     d:DesignWidth="400">
+    <UserControl.Resources>
+        <converters:SourceCodeTitleScoreToDisplayStringConverter x:Key="TitleStateConverter"/>
+    </UserControl.Resources>
 
     <StackPanel>
+        
+        <!--Code title-->
         <TextBlock
-            Text="File name"/>
+            Text="File name:"
+            x:Uid="FilenameBlock"
+            Style="{StaticResource TextBlockMainTemplateStyle}"/>
         <TextBox 
-            Margin="0,4,0,0"
+            Margin="0,8,0,0"
             PlaceholderText="Enter the code title"
+            x:Uid="CodeTitleBox"
             TextChanged="NameBox_OnTextChanged"
             x:Name="TitleBox"/>
+        <customControls:TextValidatorControl
+            Validated="{x:Bind ViewModel.NameValid, Mode=OneWay, FallbackValue=False}"
+            DisplayedInfo="{x:Bind ViewModel.NameScore, Converter={StaticResource TitleStateConverter}, Mode=OneWay}"/>
+
+        <!--Small preview-->
+        <TextBlock
+            Margin="0,12,0,0"
+            Text="Code preview:"
+            x:Uid="CodePreviewBlock"
+            Style="{StaticResource TextBlockMainTemplateStyle}"/>
         <TextBlock
             Margin="0,4,0,0"
-            Text="{x:Bind ViewModel.NameValid, Mode=OneWay}"/>
+            MaxLines="3"
+            TextWrapping="Wrap"
+            TextTrimming="CharacterEllipsis"
+            IsTextScaleFactorEnabled="False"
+            Foreground="LightGray">
+            <Span x:Name="CodeSpan"/>
+        </TextBlock>
     </StackPanel>
 </UserControl>
