--- a/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/DataTemplates/SavedSourceCodeTemplate.xaml
@@ -6,7 +6,8 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
     d:DesignHeight="60"
-    d:DesignWidth="400">
+    d:DesignWidth="400"
+    RightTapped="SavedSourceCodeTemplate_OnRightTapped">
 
     <!--Root-->
     <Grid x:Name="RootGrid"
