Added in-app notifications manager class and UI

--- a/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
+++ b/Brainf_ck-sharp.UWP/Resources/BrushesDictionary.xaml
@@ -14,4 +14,7 @@
     
     <!--Red danger brush-->
     <SolidColorBrush x:Key="RedDangerBrush" Color="#FFDC232B"/>
+    
+    <!--Warning brush-->
+    <SolidColorBrush x:Key="OrangeWarningBrush" Color="#FFFF7A28"/>
 </ResourceDictionary>
