Implemented favorite/unfavored feature

--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/LocalSourceCodesBrowserFlyout.xaml
@@ -36,7 +36,11 @@
                         <DataTemplate>
                             <dataTemplates:SavedSourceCodeTemplate 
                                 SourceCode="{Binding Item2}"
-                                CodeType="{Binding Item1}"/>
+                                CodeType="{Binding Item1}"
+                                FavoriteToggleRequested="SavedSourceCodeTemplate_OnFavoriteToggleRequested"
+                                RenameRequested="SavedSourceCodeTemplate_OnRenameRequested"
+                                ShareRequested="SavedSourceCodeTemplate_OnShareRequested"
+                                DeleteRequested="SavedSourceCodeTemplate_OnDeleteRequested"/>
                         </DataTemplate>
                     </ListView.ItemTemplate>
                     <ListView.GroupStyle>
