Improvements to the FlyoutManager class

--- a/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/FlyoutContainer.xaml
@@ -79,6 +79,7 @@
         <ScrollViewer 
             Grid.Row="1"
             Visibility="Collapsed"
+            VerticalScrollBarVisibility="Hidden"
             x:Name="ContentScroller"/>
         
         <!--Confirm button-->
