--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
@@ -15,6 +15,27 @@
     d:DesignHeight="300"
     d:DesignWidth="400">
     <UserControl.Resources>
+        
+        <!--Buttons animation-->
+        <Storyboard 
+            x:Name="ButtonsOutStoryboard"
+            TargetName="ButtonsGrid">
+            <DoubleAnimation
+                Storyboard.TargetProperty="Height"
+                EnableDependentAnimation="True"
+                From="60"
+                To="0"
+                Duration="0:0:0.5">
+                <DoubleAnimation.EasingFunction>
+                    <CircleEase EasingMode="EaseOut"/>
+                </DoubleAnimation.EasingFunction>
+            </DoubleAnimation>
+            <DoubleAnimation
+                Storyboard.TargetProperty="Opacity"
+                From="1"
+                To="0"
+                Duration="0:0:0.5"/>
+        </Storyboard>
 
         <!--Stdout-->
         <DataTemplate x:Key="StdoutTemplate">
@@ -151,8 +172,10 @@
 
         <!--Breakpoints control buttons-->
         <Grid 
+            Height="60"
+            x:Name="ButtonsGrid"
             Grid.Row="1"
-            Visibility="{x:Bind ViewModel.BreakpointMode, Mode=OneWay, FallbackValue=Collapsed}">
+            Visibility="{x:Bind ViewModel.BreakpointMode, FallbackValue=Collapsed}">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="*"/>
@@ -160,7 +183,7 @@
             
             <!--Continue-->
             <customControls:IDESessionBreakpointOptionControl
-                Height="60"
+                VerticalAlignment="Stretch"
                 Title="Continue"
                 x:Uid="ContinueButton"
                 Tapped="{x:Bind ViewModel.Continue}">
@@ -178,7 +201,7 @@
             <!--Skip-->
             <customControls:IDESessionBreakpointOptionControl
                 Grid.Column="1"
-                Height="60"
+                VerticalAlignment="Stretch"
                 Title="Skip"
                 x:Uid="SkipButton"
                 Tapped="{x:Bind ViewModel.RunToCompletion}">
