--- a/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Flyouts/IDERunResultFlyout.xaml
@@ -104,8 +104,18 @@
         <!--Memory state-->
         <DataTemplate x:Key="MemoryStateTemplate">
             <flyouts:MemoryViewerFlyout
-                Margin="12,0,0,0"
+                Margin="12,0,0,-4"
                 Source="{Binding IndexedState}"/>
+        </DataTemplate>
+        
+        <!--Statistics-->
+        <DataTemplate x:Key="StatisticsTemplate">
+            <customControls:ScriptStatisticsDisplayControl 
+                HorizontalAlignment="Left"
+                Margin="12,8,16,12"
+                Height="48"
+                Width="260"
+                Result="{Binding Session.CurrentResult}"/>
         </DataTemplate>
 
         <!--Template selector-->
