--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -186,7 +186,7 @@
                     x:Uid="PlayButton"
                     DefaultButton="True"
                     IsEnabled="{x:Bind ViewModel.PlayAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestPlay}"/>
+                    Click="{x:Bind ViewModel.RequestPlay}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Memory state"
                     Icon="&#xE74C;"
@@ -199,14 +199,14 @@
                     x:Uid="Clear"
                     IsEnabled="{x:Bind ViewModel.ClearAvailable, Mode=OneWay, FallbackValue=False}"
                     DefaultButton="True"
-                    Click="{x:Bind RequestClearConsoleLine}"/>
+                    Click="{x:Bind ViewModel.RequestClearConsoleLine}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Undo"
                     Icon="&#xE750;"
                     x:Uid="Undo"
                     IsEnabled="{x:Bind ViewModel.UndoAvailable, Mode=OneWay, FallbackValue=False}"
                     DefaultButton="True"
-                    Click="{x:Bind RequestUndoConsoleCharacter}"/>
+                    Click="{x:Bind ViewModel.RequestUndoConsoleCharacter}"/>
                 
                 <!--IDE buttons-->
                 <customCommandBar:CustomCommandBarButton
@@ -214,24 +214,24 @@
                     Icon="&#xE102;"
                     x:Uid="PlayButton"
                     IsEnabled="{x:Bind ViewModel.IDECodeAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestPlay}"/>
+                    Click="{x:Bind ViewModel.RequestPlay}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Debug"
                     Icon="&#xEBE8;"
                     x:Uid="DebugButton"
                     IsEnabled="{x:Bind ViewModel.DebugAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestDebug}"/>
+                    Click="{x:Bind ViewModel.RequestDebug}"/>
                 <customCommandBar:CustomCommandBarSeparator/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Undo"
                     Icon="&#xE10E;"
                     x:Uid="UndoButton"
-                    Click="{x:Bind RequestIDEUndo}"/>
+                    Click="{x:Bind ViewModel.RequestIDEUndo}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Redo"
                     Icon="&#xE10D;"
                     x:Uid="RedoButton"
-                    Click="{x:Bind RequestIDERedo}"/>
+                    Click="{x:Bind ViewModel.RequestIDERedo}"/>
             </customCommandBar:CommandBarWithButtonsAnimations.PrimaryCommands>
             <customCommandBar:CommandBarWithButtonsAnimations.SecondaryCommands>
                 <customCommandBar:CustomCommandBarButton
@@ -239,21 +239,21 @@
                     x:Uid="RepeatScript"
                     Icon="&#xE117;"
                     IsEnabled="{x:Bind ViewModel.RepeatLastScriptAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestRepeatLastConsoleScript}"
+                    Click="{x:Bind ViewModel.RequestRepeatLastConsoleScript}"
                     Visibility="{x:Bind PivotControl.SelectedIndex, Converter={StaticResource IndexToVisibilityConverter}, ConverterParameter=0, Mode=OneWay, FallbackValue=Collapsed}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Restart"
                     x:Uid="Restart"
                     Icon="&#xE9F3;"
                     IsEnabled="{x:Bind ViewModel.RestartAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestRestartConsole}"
+                    Click="{x:Bind ViewModel.RequestRestartConsole}"
                     Visibility="{x:Bind PivotControl.SelectedIndex, Converter={StaticResource IndexToVisibilityConverter}, ConverterParameter=0, Mode=OneWay, FallbackValue=Collapsed}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Clear screen"
                     x:Uid="Clrscr"
                     Icon="&#xEA99;"
                     IsEnabled="{x:Bind ViewModel.ClearScreenAvailable, Mode=OneWay, FallbackValue=False}"
-                    Click="{x:Bind RequestClearScreen}"/>
+                    Click="{x:Bind ViewModel.RequestClearScreen}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Show Unicode characters"
                     x:Uid="Unicode"
@@ -270,14 +270,14 @@
                     Label="Save"
                     x:Uid="SaveButton"
                     Icon="&#xE105;"
-                    Click="{x:Bind RequestSaveSourceCode}"
+                    Click="{x:Bind ViewModel.RequestSaveSourceCode}"
                     IsEnabled="{x:Bind ViewModel.SaveAvailable, Mode=OneWay, FallbackValue=False}"
                     Visibility="{x:Bind PivotControl.SelectedIndex, Converter={StaticResource IndexToVisibilityConverter}, ConverterParameter=1, Mode=OneWay, FallbackValue=Collapsed}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Save as"
                     x:Uid="SaveAsButton"
                     Icon="&#xEA35;"
-                    Click="{x:Bind RequestSaveSourceCodeAs}"
+                    Click="{x:Bind ViewModel.RequestSaveSourceCodeAs}"
                     IsEnabled="{x:Bind ViewModel.SaveAsAvailable, Mode=OneWay, FallbackValue=True}"
                     Visibility="{x:Bind PivotControl.SelectedIndex, Converter={StaticResource IndexToVisibilityConverter}, ConverterParameter=1, Mode=OneWay, FallbackValue=Collapsed}"/>
             </customCommandBar:CommandBarWithButtonsAnimations.SecondaryCommands>
