Added UI tweak in the command bar for small screens

--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -176,6 +176,7 @@
             RelativePanel.AlignLeftWithPanel="True"
             RelativePanel.AlignRightWithPanel="True"
             RelativePanel.Above="InfoBar"
+            Style="{StaticResource ScrollableCommandBarStyle}"
             CommandBarOverflowPresenterStyle="{StaticResource AcrylicCommandBarOverflowPresenter}">
             <customCommandBar:CommandBarWithButtonsAnimations.PrimaryCommands>
                 
