--- a/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
+++ b/Brainf_ck-sharp.UWP/UserControls/Shell.xaml
@@ -184,6 +184,7 @@
                 <customCommandBar:CustomCommandBarButton
                     Label="Play"
                     Icon="&#xE102;"
+                    Foreground="DarkGreen"
                     x:Uid="PlayButton"
                     DefaultButton="True"
                     IsEnabled="{x:Bind ViewModel.PlayAvailable, Mode=OneWay, FallbackValue=False}"
@@ -213,12 +214,14 @@
                 <customCommandBar:CustomCommandBarButton
                     Label="Play"
                     Icon="&#xE102;"
+                    Foreground="DarkGreen"
                     x:Uid="PlayButton"
                     IsEnabled="{x:Bind ViewModel.IDECodeAvailable, Mode=OneWay, FallbackValue=False}"
                     Click="{x:Bind ViewModel.RequestPlay}"/>
                 <customCommandBar:CustomCommandBarButton
                     Label="Debug"
                     Icon="&#xEBE8;"
+                    Foreground="{StaticResource RedDangerBrush}"
                     x:Uid="DebugButton"
                     IsEnabled="{x:Bind ViewModel.DebugAvailable, Mode=OneWay, FallbackValue=False}"
                     Click="{x:Bind ViewModel.RequestDebug}"/>
