Added source codes automatic roaming sync

--- a/Brainf_ck-sharp.UWP/PopupService/UI/NotificationPopup.xaml
+++ b/Brainf_ck-sharp.UWP/PopupService/UI/NotificationPopup.xaml
@@ -61,7 +61,7 @@
                 <TextBlock
                     Text="&#xE106;"
                     Style="{StaticResource FontIconTextBlockStyle}"
-                    IsTextScaleFactorEnabled="False"
+                    FontSize="10"
                     VerticalAlignment="Center"
                     HorizontalAlignment="Center"/>
             </Button>
