Added invalid breakpoint position message

--- a/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
+++ b/Brainf_ck-sharp.UWP/Styles/TextStyles.xaml
@@ -16,6 +16,7 @@
         <Setter Property="MaxLines" Value="1"/>
         <Setter Property="TextWrapping" Value="NoWrap"/>
         <Setter Property="TextTrimming" Value="CharacterEllipsis"/>
+        <Setter Property="IsTextScaleFactorEnabled" Value="False"/>
     </Style>
 
     <!--A 1 line, trimmed TextBlock-->
