--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -283,11 +283,7 @@
                 Width="1"
                 Height="20"
                 Fill="LightGray"
-                x:Name="CursorRectangle">
-                <Rectangle.RenderTransform>
-                    <TranslateTransform x:Name="CursorTransform"/>
-                </Rectangle.RenderTransform>
-            </Rectangle>
+                x:Name="CursorRectangle"/>
         </Canvas>
 
         <!--Canvas with the column guides-->
@@ -299,11 +295,7 @@
             <Grid.Clip>
                 <RectangleGeometry x:Name="BracketsClip"/>
             </Grid.Clip>
-            <Canvas x:Name="BracketGuidesCanvas">
-                <Canvas.RenderTransform>
-                    <TranslateTransform x:Name="GuidesTransform"/>
-                </Canvas.RenderTransform>
-            </Canvas>
+            <Canvas x:Name="BracketGuidesCanvas"/>
         </Grid>
     </Grid>
 </UserControl>
