Fixed a small UI glitch with the virtual IDE cursor animation

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -283,7 +283,11 @@
                 Width="1"
                 Height="20"
                 Fill="LightGray"
-                x:Name="CursorRectangle"/>
+                x:Name="CursorRectangle">
+                <Rectangle.RenderTransform>
+                    <TranslateTransform x:Name="CursorTransform"/>
+                </Rectangle.RenderTransform>
+            </Rectangle>
         </Canvas>
 
         <!--Canvas with the column guides-->
