Added fix for indentation indicators vertical scaling

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -229,7 +229,8 @@
                 ScrollViewer.VerticalScrollBarVisibility="Hidden"
                 ScrollViewer.VerticalScrollMode="Disabled"
                 IsHitTestVisible="False"
-                x:Name="IndentationInfoList"/>
+                x:Name="IndentationInfoList"
+                SizeChanged="IndentationInfoList_OnSizeChanged"/>
         </Canvas>
         
         <!--Breakpoints line indicators-->
