Added scaling fix for git diff indicators, minor tweaks

--- a/Brainf_ck-sharp.UWP/Views/IDEView.xaml
+++ b/Brainf_ck-sharp.UWP/Views/IDEView.xaml
@@ -215,7 +215,8 @@
                 ItemTemplateSelector="{StaticResource DiffTemplateSelector}"
                 ScrollViewer.VerticalScrollBarVisibility="Hidden"
                 ScrollViewer.VerticalScrollMode="Disabled"
-                IsHitTestVisible="False"/>
+                IsHitTestVisible="False"
+                SizeChanged="GitDiffListView_OnSizeChanged"/>
         </Canvas>
 
         <!--Indentation indicators-->
